--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,35 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+/**
+ * para tirar a transicao poderia ser colocado tambem um addEventListener(' transitionend'), o problema com isso e que
+ * o event listener nao funciona em NodeList " que no caso e tipo um array".
+ */ 
+window.addEventListener('keydown',playSound);
+
+function playSound(e){
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); 
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  if(!audio) return;
+  audio.currentTime = 0;
+  audio.play();
+  console.log(key);
+
+  key.classList.add('playing');
+};
+  
+function removeTransition(e){
+
+  console.log(e);
+  if(e.propertyName !== 'transform') return;
+  e.target.classList.remove('playing');
+};
+
+const allKeys = Array.from(document.querySelectorAll('.key'));
+console.log(document.querySelectorAll('.key'));
+//allKeys.forEach(key => key.addEventListener('transitionend', removeTransition ))
+
+allKeys.forEach(key => key.addEventListener('all', console.log ))
 
 </script>
 
