--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -8,11 +8,19 @@
 
 
     <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+      <div class="clock-border">
+        <div class="numbers">
+          <div class="n12">12</div>
+          <div class="n3">3</div>
+          <div class="n6">6</div>
+          <div class="n9">9</div>
+        </div> 
+        <div class="clock-face">
+          <div class="hand hour-hand"></div>
+          <div class="hand min-hand"></div>
+          <div class="hand second-hand"></div>
+        </div>
+      </div>      
     </div>
 
 
@@ -49,6 +57,23 @@
         0 0 10px rgba(0,0,0,0.2);
     }
 
+    .clock-border{  
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    .numbers{
+      position:absolute;
+      width:100%;
+      height:100%;
+
+    }
+
+    .n12{
+      left:50%;
+    }
+
     .clock-face {
       position: relative;
       width: 100%;
@@ -59,15 +84,53 @@
     .hand {
       width: 50%;
       height: 6px;
-      background: black;
       position: absolute;
       top: 50%;
+      transform-origin:100%;
+      transition-timing-function: cubic-bezier(0.1, 2.43, 1, 0.85);
     }
 
-  </style>
+    .hour-hand {
+      background: black;
+    }
+
+    .min-hand {
+      background: red;
+    }
+
+    .second-hand {
+      background:green;
+    }
+
+</style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setDate(){
+      const now = new Date();
+
+      const seconds = now.getSeconds();
+      const secondsInDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsInDegrees}deg)`;
+
+      const minutes = now.getMinutes();
+      const minutesInDegrees = ((minutes / 60) * 360) + 90;
+      minHand.style.transform = `rotate(${minutesInDegrees}deg)`;      
+       
+      const hours = now.getHours();
+      const hoursInDegrees = ((hours / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursInDegrees}deg)`;      
+
+      //console.log("sec: " + seconds);
+      console.log("hour: " + hoursInDegrees);
+      //console.log("min: " + minutes);
+
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
